cabal-version:       2.2
name:                vm-demo
version:             0.1.0.0
author:              Kaptch
maintainer:          kaptch@gmail.com
build-type:          Simple

executable vm-demo
  main-is:             Main.hs
  build-depends:       base
                     , secd
                     , brick
                     , microlens
                     , microlens-th
                     , vty
                     , mtl
                     , vector
                     , text-zipper
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
